--- a/styles/HojaPrueba.css
+++ b/styles/HojaPrueba.css
@@ -8,3 +8,9 @@
  /* animation-fill-mode: both; */
  /* controla el tiempo que tarda la animacion en iniciar */
  /* animation-delay: 1s; */
+
+ width: 50px;
+ height: 50px; 
+ transform: rotate(-41.25deg);
+ transform-origin: 0 0;
+ background: #9D262D;
