--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,6 @@ header {
     border-radius: 0%;
   }
 }
-
 .cuadrado__borde-dos {
   border: solid 3px #9d262e50;
   position: absolute;
@@ -114,4 +113,34 @@ header {
   left: 90%;
   border-radius: 50%;
   animation: mover 10s infinite alternate-reverse ease-in-out;
+}
+.cuadrado__borde-tres {
+  border: solid 3px #9d262e50;
+  position: absolute;
+  top: 26rem;
+  left: 88%;
+  border-radius: 50%;
+  animation: mover 5s infinite alternate-reverse ease-in-out;
+}
+
+
+/* seccion de Works */
+
+.puntero-titulo{
+  width: 50px;
+  height: 50px; 
+  transform: rotate(-41.25deg);
+  transform-origin: 0 0;
+  background: #9D262D;
+}
+.puntero-titulo h4{
+text-align: center;
+font-family: Jost;
+font-size: 1.79688rem;
+font-style: italic;
+font-weight: 400;
+line-height: normal;
+text-decoration-line: strikethrough;
+  transform: rotate(44deg);
+  transform-origin: 0 0;
 }
