--- a/styles/HojaPrueba.css
+++ b/styles/HojaPrueba.css
@@ -1,16 +1,28 @@
  /* controla la duracion de la animacion */
- animation-duration: 15s;
+ /* animation-duration: 15s; */
  /* controla las veces de repeticion de la animacion */
- animation-iteration-count: infinite; 
+ /* animation-iteration-count: infinite;  */
  /* Controla el sentido de ejecucion de la animacion */
- animation-direction: alternate;
+ /* animation-direction: alternate; */
  /* define lo que sucede antes y despues de la animacion */
  /* animation-fill-mode: both; */
  /* controla el tiempo que tarda la animacion en iniciar */
  /* animation-delay: 1s; */
-
- width: 50px;
- height: 50px; 
- transform: rotate(-41.25deg);
- transform-origin: 0 0;
- background: #9D262D;
+ 
+ span {
+    --thickness: .1em;
+    --strike: 0;
+    
+    background: linear-gradient(90deg, transparent, currentColor 0) no-repeat 
+                right center / calc(var(--strike) * 100%) var(--thickness);
+  
+    transition: background-size .4s ease;
+    font: 25px Arial;
+    padding: 0 .2em;
+  }
+  
+  span:hover {
+    --strike: 1; /* "1" means "true" (show the strike line) */
+    background-position-x: left;
+  }
+  
